fpscap 142 config/templates/modules/modules.cfg

--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -135,7 +135,7 @@
 // ultra, high, low, off
 
 //fpscap=1000
-// unlimited, 1000, 400, 360, 300, 240, 200, 180, 165, 160, 144, 120, 75, 60, 30, powersaver
+// unlimited, 1000, 400, 360, 300, 240, 200, 180, 165, 160, 144, 142, 120, 75, 60, 30, powersaver
 
 //vsync=off
 // off, on
