--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -110,14 +110,14 @@ alias packet_rate packet_rate_standard
 //cl_interp_ratio 3;cl_interp .045 // Protect more against packet loss, increase further for more buffer protection. Recommended only for users with an unstable connection.
 //cl_interp 0.1 // Useful for smooth animation, use it in offline recordings and singleplayer
 
-alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto"
+alias snapshot_buffer_automatic"alias snapshot_buffer_level echo snapshot_buffer=automatic"
 alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_high;alias snapshot_buffer_level echo snapshot_buffer=high"
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer_low"
-alias snapshot_buffer_custom"alias snapshot_buffer_auto;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
 alias snapshot_buffer_anim"snapshot_buffer_custom;cl_interp 0.1;setinfo cl_interp 0.1;alias snapshot_buffer_level echo snapshot_buffer=anim"
+alias snapshot_buffer_custom"alias snapshot_buffer_automatic;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias snapshot_buffer_anim;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
 
-alias snapshot_buffer snapshot_buffer_auto
+alias snapshot_buffer snapshot_buffer_automatic
 
 alias net_hitscan "snapshot_buffer_safe;cl_pred_optimize 2" // Scout, Heavy, Engineer, Sniper
 alias net_projectiles "snapshot_buffer_low;cl_pred_optimize 2" // Soldier, Pyro, Demoman, Medic
@@ -177,13 +177,13 @@ net_maxfilesize 64 // Max out file upload size for extra content
 //cl_downloadfilter none // Do not download any custom files from servers
 //tf_workshop_refresh // Refresh workshop subscriptions
 
-alias download_auto"alias download_level echo download=auto"
+alias download_custom"alias download_level echo download=custom"
 alias download_all"cl_downloadfilter all;alias download_level echo download=all"
 alias download_nosounds"cl_downloadfilter nosounds;alias download_level echo download=nosounds"
 alias download_mapsonly"cl_downloadfilter mapsonly;alias download_level echo download=mapsonly"
 alias download_nothing"cl_downloadfilter none;alias download_level echo download=nothing"
 
-alias download download_auto
+alias download download_custom
 
 alias cat_mm_queue_casual"quit trolling"
 
@@ -704,11 +704,11 @@ alias sprays
 //violence_hblood 0 // Enable silly gibs/blood (less performance, except when no gibs)
 //tf_playergib 1 // Control gibbing on local servers: 0: never, 1: default, 2: always.
 
-alias sillygibs_auto"alias sillygibs_level echo sillygibs=auto"
+alias sillygibs_automatic"alias sillygibs_level echo sillygibs=automatic"
 alias sillygibs_off"violence_hgibs 1;violence_hblood 1;violence_agibs 1;violence_ablood 1;alias sillygibs_level echo sillygibs=off"
 alias sillygibs_on"violence_hgibs 0;violence_hblood 0;violence_agibs 0;violence_ablood 0;alias sillygibs_level echo sillygibs=on"
 
-alias sillygibs sillygibs_auto
+alias sillygibs sillygibs_automatic
 
 alias gibs_off"cl_burninggibs 0;props_break_max_pieces 0;tf_playergib 0;sillygibs_on;sillygibs;alias gibs_level echo gibs=off"
 alias gibs_low"cl_burninggibs 0;props_break_max_pieces 2;tf_playergib 1;sillygibs_off;sillygibs;alias gibs_level echo gibs=low"
@@ -1083,7 +1083,7 @@ alias dynamic_background_dustbowl"map_background background01;wait 1000;stop;ali
 
 alias dynamic_background dynamic_background_off
 
-//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
+//cl_disablehtmlmotd 1 // Disable HTML MOTDs (advertisements, music player, rules, fancy server intros)
 
 alias htmlmotd_off"cl_disablehtmlmotd 1;alias htmlmotd_level echo htmlmotd=off"
 alias htmlmotd_on"cl_disablehtmlmotd 0;alias htmlmotd_level echo htmlmotd=on"
@@ -1097,7 +1097,7 @@ alias htmlmotd htmlmotd_off
 
 //hud_combattext 1 // Enable damage text
 //hud_combattext_batching 1 // Collect damage into one number over a time interval
-//hud_combattext_batching_window 1 // Time in seconds to collect damage (maximum 2 seconds)
+//hud_combattext_batching_window 2 // Time in seconds to collect damage (maximum 2 seconds)
 hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
 //hud_combattext_healing 1 // Show healing text
 //hud_combattext_red 255 // Red value for damage text color (0 to 255)
@@ -1204,12 +1204,12 @@ cl_notifications_show_ingame 1 // Show notifications in game
                                  // 1 - all
                                  // 2 - active only
 
-alias hud_contracts_auto"alias hud_contracts_level echo hud_contracts=auto"
+alias hud_contracts_custom"alias hud_contracts_level echo hud_contracts=custom"
 alias hud_contracts_hide"tf_contract_competitive_show 0;tf_contract_progress_show 0;alias hud_contracts_level echo hud_contracts=hide"
 alias hud_contracts_all"tf_contract_competitive_show 1;tf_contract_progress_show 1;alias hud_contracts_level echo hud_contracts=all"
 alias hud_contracts_active"tf_contract_competitive_show 2;tf_contract_progress_show 2;alias hud_contracts_level echo hud_contracts=active"
 
-alias hud_contracts hud_contracts_auto
+alias hud_contracts hud_contracts_custom
 
 // --------------------
 // '-- Achievements --'
@@ -1276,7 +1276,7 @@ alias debug_output_2"developer 2"
 alias debug_instant_respawn"sv_cheats 1;mp_disable_respawn_times 1;spec_freeze_time 0;spec_freeze_traveltime 0;mp_respawnwavetime 0"
 alias debug_invulnerable"sv_cheats 1;buddha"
 
-alias debug_bots"tf_bot_kick all;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
+alias debug_bots"tf_bot_kick all;tf_bot_quota 0;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
 alias debug_target"sv_cheats 1;bot -targetdummy"
 
 alias debug_occlusion"sv_cheats 1;r_visocclusion 1;r_occlusionspew 1"
@@ -1600,7 +1600,6 @@ alias sound
 //voice_recordtofile 1 // Enable recording voice chat to voice_micdata.wav and voice_decompressed.wav
 //voice_scale 1 // How loud input volume is
 //voice_overdrivefadetime .4 // How long to fade voice overdrive in seconds
-//voice_fadeouttime 0 // Only fade out over two samples, to fix an cutting out issue with long voice streams
 
 alias voice_chat_off"voice_enable 0;voice_modenable 0;cmd VModEnable 0;alias voice_chat_level echo voice_chat=off"
 alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voice_chat_level echo voice_chat=on"
@@ -1688,11 +1687,11 @@ alias sourcetv=on"alias sourcetv sourcetv_on"
 alias packet_rate=congestion"alias packet_rate packet_rate_congestion"
 alias packet_rate=standard"alias packet_rate packet_rate_standard"
 alias packet_rate=max"alias packet_rate packet_rate_max"
-alias snapshot_buffer=auto"alias snapshot_buffer snapshot_buffer_auto"
+alias snapshot_buffer=automatic"alias snapshot_buffer snapshot_buffer_automatic"
 alias snapshot_buffer=high"alias snapshot_buffer snapshot_buffer_high"
 alias snapshot_buffer=safe"alias snapshot_buffer snapshot_buffer_safe"
-alias snapshot_buffer=custom"alias snapshot_buffer snapshot_buffer_custom"
 alias snapshot_buffer=anim"alias snapshot_buffer snapshot_buffer_anim"
+alias snapshot_buffer=custom"alias snapshot_buffer snapshot_buffer_custom"
 alias packet_size=small"alias packet_size packet_size_small"
 alias packet_size=conservative"alias packet_size packet_size_conservative"
 alias packet_size=large"alias packet_size packet_size_large"
@@ -1708,8 +1707,7 @@ alias bandwidth=2.5Mbps"alias bandwidth bandwidth_2.5Mbps"
 alias bandwidth=3.0Mbps"alias bandwidth bandwidth_3.0Mbps"
 alias bandwidth=4.0Mbps"alias bandwidth bandwidth_4.0Mbps"
 alias bandwidth=6.0Mbps"alias bandwidth bandwidth_6.0Mbps"
-alias bandwidth=8.0Mbps"alias bandwidth bandwidth_6.0Mbps"
-alias download=auto"alias download download_auto"
+alias download=custom"alias download download_custom"
 alias download=all"alias download download_all"
 alias download=nosounds"alias download download_nosounds"
 alias download=mapsonly"alias download download_mapsonly"
@@ -1798,7 +1796,7 @@ alias gibs=low"alias gibs gibs_low"
 alias gibs=medium_low"alias gibs gibs_medium_low"
 alias gibs=medium"alias gibs gibs_medium"
 alias gibs=high"alias gibs gibs_high"
-alias sillygibs=auto"alias sillygibs sillygibs_auto"
+alias sillygibs=automatic"alias sillygibs sillygibs_automatic"
 alias sillygibs=off"alias sillygibs sillygibs_off"
 alias sillygibs=on"alias sillygibs sillygibs_on"
 alias props=low"alias props props_low"
@@ -1852,7 +1850,7 @@ alias vsync=off"alias vsync vsync_off"
 alias vsync=on"alias vsync vsync_on"
 alias hud_player_model=off"alias hud_player_model hud_player_model_off"
 alias hud_player_model=on"alias hud_player_model hud_player_model_on"
-alias hud_contracts=auto"alias hud_contracts hud_contracts_auto"
+alias hud_contracts=custom"alias hud_contracts hud_contracts_custom"
 alias hud_contracts=hide"alias hud_contracts hud_contracts_hide"
 alias hud_contracts=all"alias hud_contracts hud_contracts_all"
 alias hud_contracts=active"alias hud_contracts hud_contracts_active"
