--- a/config/mastercomfig/cfg/comfig/very_low_reset.cfg
+++ b/config/mastercomfig/cfg/comfig/very_low_reset.cfg
@@ -10,4 +10,4 @@ tf_simple_disguise_menu 0
 tf_use_min_viewmodels 0
 viewmodel_fov 54
 
-echo"Very Low preset settings have been reset"
+echo"Very Low preset settings have been reset to TF2 defaults"
