--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -704,7 +704,7 @@ tf_hud_target_id_show_avatars 0 // Show avatars: 0 - never, 1 - from everyone, 2
 
 //map_background itemtest // Map background for enhancing main menu visuals, or to preload content
 
-cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
+cl_disablehtmlmotd 1 // Disable HTML MOTDs (advertisements, music player, rules, fancy server intros)
 
 // -------------------
 // '-- Combat Text --'
@@ -713,7 +713,7 @@ cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy serv
 
 //hud_combattext 1 // Enable damage text
 //hud_combattext_batching 1 // Collect damage into one number over a time interval
-//hud_combattext_batching_window 1 // Time in seconds to collect damage (maximum 2 seconds)
+//hud_combattext_batching_window 2 // Time in seconds to collect damage (maximum 2 seconds)
 hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
 //hud_combattext_healing 1 // Show healing text
 //hud_combattext_red 255 // Red value for damage text color (0 to 255)
@@ -864,7 +864,7 @@ alias debug_output_2"developer 2"
 alias debug_instant_respawn"sv_cheats 1;mp_disable_respawn_times 1;spec_freeze_time 0;spec_freeze_traveltime 0;mp_respawnwavetime 0"
 alias debug_invulnerable"sv_cheats 1;buddha"
 
-alias debug_bots"tf_bot_kick all;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
+alias debug_bots"tf_bot_kick all;tf_bot_quota 0;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
 alias debug_target"sv_cheats 1;bot -targetdummy"
 
 alias debug_occlusion"sv_cheats 1;r_visocclusion 1;r_occlusionspew 1"
@@ -1166,7 +1166,6 @@ snd_async_spew_blocking 0 // Disable async spew
 //voice_recordtofile 1 // Enable recording voice chat to voice_micdata.wav and voice_decompressed.wav
 //voice_scale 1 // How loud input volume is
 //voice_overdrivefadetime .4 // How long to fade voice overdrive in seconds
-//voice_fadeouttime 0 // Only fade out over two samples, to fix an cutting out issue with long voice streams
 
 // ===============
 // '--- Input ---'
