--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -31,17 +31,17 @@
 //packet_rate=standard
 // standard, congestion
 
-//snapshot_buffer=auto
-// auto, safe, high, custom, anim
+//snapshot_buffer=automatic
+// automatic, safe, high, anim, custom
 
-//packet_size=speed
-// speed, saver, conservative, small
+//packet_size=large
+// large, conservative, small
 
 //bandwidth=1.0Mbps
-// 8.0Mbps, 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
+// 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
 
-//download=auto
-// auto, all, nosounds, mapsonly, nothing
+//download=custom
+// custom, all, nosounds, mapsonly, nothing
 
 //********************************************************************************
 // RENDERING MODULES
@@ -107,8 +107,8 @@
 //gibs=high
 // high, medium, medium_low, low, off
 
-//sillygibs=auto
-// auto, on, off
+//sillygibs=automatic
+// automatic, on, off
 
 //props=ultra
 // ultra, high, medium, low
@@ -147,8 +147,8 @@
 //hud_player_model=on
 // on, off
 
-//hud_contracts=auto
-// auto, hide, all, active
+//hud_contracts=custom
+// custom, hide, all, active
 
 //hud_panels=high
 // high, low, off
