--- a/config/cfg/addons/opengl.cfg
+++ b/config/cfg/addons/opengl.cfg
@@ -1,15 +1,16 @@
 // OpenGL addon
 // Provides additional optimizations for OpenGL (macOS and Linux)
 
-gl_pow2_tempmem 1
-mat_texture_reload_frame_swap_workaround 0
-gl_mtglflush_at_tof 1
-gl_debug_output 0
-gl_magnify_resolve_mode 1
-gl_batch_tex_creates 1
-gl_batch_tex_destroys 1
-gl_radar7954721_workaround_mixed 0
-gl_paircache_rows_lg2 11
+gl_pow2_tempmem 1 // Use better texture storage for better memory usage/fragmentation
+mat_texture_reload_frame_swap_workaround 0 // Disable workaround for texture reloads on macOS
+gl_mtglflush_at_tof 1 // Use glFlush instead of ForceHardwareSync
+mat_forcehardwaresync 0 // ^
+gl_debug_output 0 // Disable debug output
+gl_magnify_resolve_mode 1 // Fastest upscale mode, instead of nicest
+gl_batch_tex_creates 1 // Use a reserved list of gl textures to batch
+gl_batch_tex_destroys 1 // ^
+gl_radar7954721_workaround_mixed 0 // Skip outdated workaround
+gl_paircache_rows_lg2 11 // Increase shader cache spread
 lighting_ex=high // Work around Mesa bug
 
 echo"OpenGL addon applied"
