--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.0 | August 25, 2022
+// Version: 9.10.1 | September 14, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -744,12 +744,12 @@ alias gibs
 //lod_TransitionDist -5001 // Fade map objects across a shorter distance to slightly reduce pop in while still increasing performance
 //lod_TransitionDist -5000 // Fade map objects over a long distance to reduce pop in and clutter while still increasing performance
 //lod_TransitionDist 800 // Start fading map objects only when they are very far away, decreases performance but has the least pop in
-//cl_detaildist 1200 // Distance props render at (does not work in autoexec)
-//cl_detailfade 1200 // Distance props fade at (does not work in autoexec)
+//cl_detaildist 1400 // Distance props render at (does not work in autoexec)
+//cl_detailfade 100 // Distance props fade at (does not work in autoexec)
 
 alias detail_props_none"r_drawdetailprops 0;cl_detaildist 1;cl_detailfade 0" // Trick to skip even more prop rendering stuff
-alias detail_props_medium"r_drawdetailprops 1;cl_detaildist 1200;cl_detailfade 0" // Draw detail props a short distance away and do not fade
-alias detail_props_full"r_drawdetailprops 1;cl_detaildist 1200;cl_detailfade 400" // Draw detail props a short distance away and fade
+alias detail_props_medium"r_drawdetailprops 1;cl_detaildist 1400;cl_detailfade 0" // Draw detail props a short distance away and do not fade
+alias detail_props_full"r_drawdetailprops 1;cl_detaildist 2000;cl_detailfade 100" // Draw detail props a short distance away and fade
 
 alias props_low"r_decalstaticprops 0;cl_phys_props_enable 0;r_staticprop_lod 7;r_propsmaxdist 0;lod_TransitionDist -1;detail_props_none;alias detail_props_override detail_props_none;alias props_level echo props=low"
 alias props_medium"r_decalstaticprops 0;cl_phys_props_enable 0;r_staticprop_lod -1;r_propsmaxdist 0;lod_TransitionDist -1;detail_props_none;alias detail_props_override detail_props_none;alias props_level echo props=medium"
@@ -884,10 +884,9 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
 //r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
-r_occluderminarea 401 // Skip all occluders by default
-r_occludermincount 4 // Use the largest 4 occluders
-mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
+r_occludeemaxarea 5 // Usually any entities larger than this will not be worth testing
+r_occluderminarea 70 // Be more aggressive about occluders
+r_occludermincount 2 // Use the largest 2 occluders
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
 //r_pixelfog 1 // Use a pixel shader for fog if possible
