--- a/config/mastercomfig/dxsupport_override.cfg
+++ b/config/mastercomfig/dxsupport_override.cfg
@@ -4,8 +4,11 @@
 	"0"
 	{
 		"name" "80"
+		"MaxDxLevel"	"80"
+		"DxLevel"	"80"
+		"DefaultRes"	"2560"
 		"ConVar.r_drawropes"	"0"
-		"ConVar.mem_min_heapsize"	"144"
+		"ConVar.mem_min_heapsize"	"64"
 		"ConVar.mem_max_heapsize"	"512"
 		"ConVar.fx_drawimpactdebris"	"0"
 		"ConVar.fx_drawimpactdust"	"0"
@@ -18,8 +21,11 @@
 	"1"
 	{
 		"name" "81"
+		"MaxDxLevel"	"81"
+		"DxLevel"	"81"
+		"DefaultRes"	"2560"
 		"ConVar.r_drawropes"	"0"
-		"ConVar.mem_min_heapsize"	"144"
+		"ConVar.mem_min_heapsize"	"64"
 		"ConVar.mem_max_heapsize"	"512"
 		"ConVar.fx_drawimpactdebris"	"0"
 		"ConVar.fx_drawimpactdust"	"0"
@@ -32,8 +38,11 @@
 	"2"
 	{
 		"name" "90"
+		"MaxDxLevel"	"90"
+		"DxLevel"	"90"
+		"DefaultRes"	"2560"
 		"ConVar.r_drawropes"	"0"
-		"ConVar.mem_min_heapsize"	"144"
+		"ConVar.mem_min_heapsize"	"64"
 		"ConVar.mem_max_heapsize"	"512"
 		"ConVar.fx_drawimpactdebris"	"0"
 		"ConVar.fx_drawimpactdust"	"0"
@@ -46,8 +55,11 @@
 	"3"
 	{
 		"name" "92"
+		"MaxDxLevel"	"92"
+		"DxLevel"	"92"
+		"DefaultRes"	"2560"
 		"ConVar.r_drawropes"	"0"
-		"ConVar.mem_min_heapsize"	"144"
+		"ConVar.mem_min_heapsize"	"64"
 		"ConVar.mem_max_heapsize"	"512"
 		"ConVar.fx_drawimpactdebris"	"0"
 		"ConVar.fx_drawimpactdust"	"0"
@@ -60,8 +72,11 @@
 	"4"
 	{
 		"name" "95"
+		"MaxDxLevel"	"95"
+		"DxLevel"	"95"
+		"DefaultRes"	"2560"
 		"ConVar.r_drawropes"	"0"
-		"ConVar.mem_min_heapsize"	"144"
+		"ConVar.mem_min_heapsize"	"64"
 		"ConVar.mem_max_heapsize"	"512"
 		"ConVar.fx_drawimpactdebris"	"0"
 		"ConVar.fx_drawimpactdust"	"0"
@@ -70,5 +85,13 @@
 		"ConVar.dsp_off"	"0"
 		"ConVar.cl_particle_retire_cost" "0"
 		"ConVar.mat_slopescaledepthbias_decal"	"-0.5"
+	}
+	"5"
+	{
+		"name" "Intel All"
+		"vendorid"	"0x8086"
+		"mindeviceid"	"0x0001"
+		"maxdeviceid"	"0xffff"
+		"ConVar.mat_tonemapping_occlusion_use_stencil"	"1"
 	}
 }
