--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -41,7 +41,7 @@
 // 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
 
 //download=custom
-// custom, all, nosounds, mapsonly, nothing
+// all, nosounds, mapsonly, nothing, custom
 
 //********************************************************************************
 // RENDERING MODULES
@@ -148,7 +148,7 @@
 // on, off
 
 //hud_contracts=custom
-// custom, hide, all, active
+// hide, all, active, custom
 
 //hud_panels=high
 // high, low, off
