--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.1 | September 14, 2022
+// Version: 9.10.1 | September 24, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -563,9 +563,9 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
 r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
-r_occluderminarea 401 // Skip all occluders by default
-r_occludermincount 4 // Use the largest 4 occluders
+r_occludeemaxarea 5 // Usually any entities larger than this will not be worth testing
+r_occluderminarea 70 // Be more aggressive about occluders
+r_occludermincount 2 // Use the largest 2 occluders
 mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
@@ -1255,7 +1255,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.10.1 | September 14, 2022"
+alias version_comfig"echo mastercomfig version: 9.10.1 | September 24, 2022"
 
 // Echo
 echo""
@@ -1270,7 +1270,7 @@ echo""
 echo"  **********************************"
 echo"  **********************************"
 echo"  mastercomfig 9.10.1 loaded"
-echo"  September 14, 2022"
+echo"  September 24, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1278,7 +1278,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 10 hours to produce."
+echo"  This release took 30 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
