--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -177,13 +177,13 @@ net_maxfilesize 64 // Max out file upload size for extra content
 //cl_downloadfilter none // Do not download any custom files from servers
 //tf_workshop_refresh // Refresh workshop subscriptions
 
-alias download_auto"alias download_level echo download=auto"
+alias download_custom"alias download_level echo download=custom"
 alias download_all"cl_downloadfilter all;alias download_level echo download=all"
 alias download_nosounds"cl_downloadfilter nosounds;alias download_level echo download=nosounds"
 alias download_mapsonly"cl_downloadfilter mapsonly;alias download_level echo download=mapsonly"
 alias download_nothing"cl_downloadfilter none;alias download_level echo download=nothing"
 
-alias download download_auto
+alias download download_custom
 
 alias cat_mm_queue_casual"quit trolling"
 
@@ -1203,12 +1203,12 @@ cl_notifications_show_ingame 1 // Show notifications in game
                                  // 1 - all
                                  // 2 - active only
 
-alias hud_contracts_auto"alias hud_contracts_level echo hud_contracts=auto"
+alias hud_contracts_custom"alias hud_contracts_level echo hud_contracts=custom"
 alias hud_contracts_hide"tf_contract_competitive_show 0;tf_contract_progress_show 0;alias hud_contracts_level echo hud_contracts=hide"
 alias hud_contracts_all"tf_contract_competitive_show 1;tf_contract_progress_show 1;alias hud_contracts_level echo hud_contracts=all"
 alias hud_contracts_active"tf_contract_competitive_show 2;tf_contract_progress_show 2;alias hud_contracts_level echo hud_contracts=active"
 
-alias hud_contracts hud_contracts_auto
+alias hud_contracts hud_contracts_custom
 
 // --------------------
 // '-- Achievements --'
@@ -1275,7 +1275,7 @@ alias debug_output_2"developer 2"
 alias debug_instant_respawn"sv_cheats 1;mp_disable_respawn_times 1;spec_freeze_time 0;spec_freeze_traveltime 0;mp_respawnwavetime 0"
 alias debug_invulnerable"sv_cheats 1;buddha"
 
-alias debug_bots"tf_bot_kick all;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
+alias debug_bots"tf_bot_kick all;tf_bot_quota 0;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
 alias debug_target"sv_cheats 1;bot -targetdummy"
 
 alias debug_occlusion"sv_cheats 1;r_visocclusion 1;r_occlusionspew 1"
@@ -1707,7 +1707,7 @@ alias bandwidth=2.5Mbps"alias bandwidth bandwidth_2.5Mbps"
 alias bandwidth=3.0Mbps"alias bandwidth bandwidth_3.0Mbps"
 alias bandwidth=4.0Mbps"alias bandwidth bandwidth_4.0Mbps"
 alias bandwidth=6.0Mbps"alias bandwidth bandwidth_6.0Mbps"
-alias download=auto"alias download download_auto"
+alias download=custom"alias download download_custom"
 alias download=all"alias download download_all"
 alias download=nosounds"alias download download_nosounds"
 alias download=mapsonly"alias download download_mapsonly"
@@ -1850,7 +1850,7 @@ alias vsync=off"alias vsync vsync_off"
 alias vsync=on"alias vsync vsync_on"
 alias hud_player_model=off"alias hud_player_model hud_player_model_off"
 alias hud_player_model=on"alias hud_player_model hud_player_model_on"
-alias hud_contracts=auto"alias hud_contracts hud_contracts_auto"
+alias hud_contracts=custom"alias hud_contracts hud_contracts_custom"
 alias hud_contracts=hide"alias hud_contracts hud_contracts_hide"
 alias hud_contracts=all"alias hud_contracts hud_contracts_all"
 alias hud_contracts=active"alias hud_contracts hud_contracts_active"
