--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -35,7 +35,7 @@
 // auto, safe, high, custom, anim
 
 //packet_size=large
-// speed, conservative, small
+// large, conservative, small
 
 //bandwidth=1.0Mbps
 // 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
