--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,6 +32,7 @@ jobs:
         version: 7
     - name: Lint Docs
       run: |
+        cd docs
         pnpm i
         pnpm lint
     - name: Update pip
