--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -559,12 +559,13 @@ rope_wind_dist 0 // Do not apply CPU intensive wind to ropes
 // --------------------
 // These settings will optimize TF2 without having any very noticeable effects to the user
 
+threadpool_affinity 0 // Disable affinity, allow the OS to schedule threads efficiently
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludeemaxarea 5 // Usually any entities larger than this will not be worth testing
-r_occluderminarea 70 // Be more aggressive about occluders
+//r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
+r_occludeemaxarea 1 // Be more conservative with our resolution
+r_occluderminarea 1 // ^
 r_occludermincount 2 // Use the largest 2 occluders
 mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
