--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -884,8 +884,8 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
 //r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludeemaxarea 5 // Usually any entities larger than this will not be worth testing
-r_occluderminarea 70 // Be more aggressive about occluders
+r_occludeemaxarea 1 // Be more conservative with our resolution
+r_occluderminarea 1 // ^
 r_occludermincount 2 // Use the largest 2 occluders
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
