disable fast z reject

--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -563,7 +563,7 @@ threadpool_affinity 0 // Disable affinity, allow the OS to schedule threads effi
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-//r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
+r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
 r_occludeemaxarea 1 // Be more conservative with our resolution
 r_occluderminarea 1 // ^
 r_occludermincount 2 // Use the largest 2 occluders
