some slight value tweaks

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -115,7 +115,7 @@ alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_hi
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer_low"
 alias snapshot_buffer_custom"alias snapshot_buffer_auto;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
-alias snapshot_buffer_anim"snapshot_buffer_custom;cl_interp 0.1;setinfo cl_interp 0.1;alias snapshot_buffer_level echo snapshot_buffer=anim"
+alias snapshot_buffer_anim"snapshot_buffer_custom;cl_interp .105;setinfo cl_interp .105;alias snapshot_buffer_level echo snapshot_buffer=anim"
 
 alias snapshot_buffer snapshot_buffer_auto
 
@@ -325,10 +325,10 @@ alias sha_fla_support_aliases"shadows=very_low;shadows_very_low"
 alias shadows_off"r_shadows 0;r_shadowrendertotexture 0;cl_blobbyshadows 1;r_shadowmaxrendered 0;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support sha_fla_support_aliases;alias shadows_level echo shadows=off"
 alias shadows_very_low"r_shadows 1;r_shadowrendertotexture 0;cl_blobbyshadows 1;r_shadowmaxrendered 0;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support;alias shadows_level echo shadows=very_low"
 alias shadows_low"r_shadows 1;r_shadowrendertotexture 0;cl_blobbyshadows 0;r_shadowmaxrendered 3;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support;alias shadows_level echo shadows=low"
-alias shadows_medium"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 7;nb_shadow_dist 100;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=medium"
+alias shadows_medium"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 7;nb_shadow_dist 200;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=medium"
 alias shadows_high"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 11;nb_shadow_dist 400;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=high"
 alias shadows_very_high"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 23;nb_shadow_dist 1000;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=very_high"
-alias shadows_ultra"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 23;nb_shadow_dist 1000;shadowlod_high;alias shadowlod_override shadowlod_high;alias sha_fla_support;alias shadows_level echo shadows=ultra"
+alias shadows_ultra"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 23;nb_shadow_dist 3000;shadowlod_high;alias shadowlod_override shadowlod_high;alias sha_fla_support;alias shadows_level echo shadows=ultra"
 
 alias shadows
 
