--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1903,17 +1903,17 @@ alias logo=on"alias logo logo_on"
 // '-- User-Overrideable Aliases --'
 // ---------------------------------
 
-alias class_config_scout"exec overrides/scout.cfg;exec app/scout.cfg"
-alias class_config_soldier"exec overrides/soldier.cfg;exec app/soldier.cfg"
-alias class_config_pyro"exec overrides/pyro.cfg;exec app/pyro.cfg"
-alias class_config_demoman"exec overrides/demoman.cfg;exec app/demoman.cfg"
-alias class_config_heavyweapons"exec overrides/heavyweapons.cfg;exec app/heavyweapons.cfg"
-alias class_config_engineer"exec overrides/engineer.cfg;exec app/engineer.cfg"
-alias class_config_medic"exec overrides/medic.cfg;exec app/medic.cfg"
-alias class_config_sniper"exec overrides/sniper.cfg;exec app/sniper.cfg"
-alias class_config_spy"exec overrides/spy.cfg;exec app/spy.cfg"
+alias class_config_scout"exec overrides/scout.cfg"
+alias class_config_soldier"exec overrides/soldier.cfg"
+alias class_config_pyro"exec overrides/pyro.cfg"
+alias class_config_demoman"exec overrides/demoman.cfg"
+alias class_config_heavyweapons"exec overrides/heavyweapons.cfg"
+alias class_config_engineer"exec overrides/engineer.cfg"
+alias class_config_medic"exec overrides/medic.cfg"
+alias class_config_sniper"exec overrides/sniper.cfg"
+alias class_config_spy"exec overrides/spy.cfg"
 
-alias game_overrides_c"exec overrides/game_overrides.cfg;exec app/game_overrides.cfg"
+alias game_overrides_c"exec overrides/game_overrides.cfg"
 alias game_overrides_once_c
 
 // HUDs use mat_antialias together with a wait in the valve.rc file to force reloads. Do not let them.
