update discord information

--- a/mkdocs.base.yml
+++ b/mkdocs.base.yml
@@ -189,7 +189,7 @@ extra:
   social:
     - icon: fontawesome/brands/discord
       name: Discord
-      link: 'https://discord.gg/CuPb2zV'
+      link: 'https://discord.gg/mastercomfig-389089828249010188'
     - icon: fontawesome/brands/steam
       name: Steam Group
       link: 'https://steamcommunity.com/groups/comfig'
