--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: mastercomfig Discord
-    url: https://discord.gg/CuPb2zV
+    url: https://discord.gg/mastercomfig-389089828249010188
     about: For mastercomfig help, suggestions and benchmarks
