allow voice toggleable

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1601,8 +1601,9 @@ alias sound
 //voice_overdrivefadetime .4 // How long to fade voice overdrive in seconds
 //voice_fadeouttime 0 // Only fade out over two samples, to fix an cutting out issue with long voice streams
 
-alias voice_chat_off"voice_enable 0;voice_modenable 0;cmd VModEnable 0;alias voice_chat_level echo voice_chat=off"
-alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voice_chat_level echo voice_chat=on"
+alias voice_chat_off"voice_enable 0;voice_modenable 0;alias voice_chat_level echo voice_chat=off"
+alias voice_chat_hidden"voice_enable 0;voice_modenable 1;alias voice_chat_level echo voice_chat=hidden"
+alias voice_chat_on"voice_enable 1;voice_modenable 1;alias voice_chat_level echo voice_chat=on"
 
 alias voice_chat voice_chat_on
 
@@ -1890,6 +1891,7 @@ alias sound=high"alias sound sound_high"
 alias sound=very_high"alias sound sound_very_high"
 alias sound=ultra"alias sound sound_ultra"
 alias voice_chat=off"alias voice_chat voice_chat_off"
+alias voice_chat=hidden"alias voice_chat voice_chat_hidden"
 alias voice_chat=on"alias voice_chat voice_chat_on"
 alias mod_support=off"alias mod_support mod_support_off"
 alias mod_support=on"alias mod_support mod_support_on"
