--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.2 | October 31, 2022
+// Version: 9.10.2 | July 9, 2023
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -228,7 +228,8 @@ r_drawtracers_firstperson 0 // Do not draw tracers when you are in first person
 cl_show_splashes 0 // Disable water splashes
 cl_ejectbrass 0 // Bullet ejection on shots
 cl_muzzleflash_dlight_1st 0 // Disable dynamic light from muzzle flash in DoD and possibly other mods
-cl_drawmonitors 0 // Draw monitors in HL2 and CS
+cl_drawmonitors 0 // Draw monitors
+tf_monitor_resolution 32 // Texture resolution for monitor render
 muzzleflash_light 0 // Muzzle flash lights
 //cl_fasttempentcollision 10 // Check every x ticks for collisions on syringes and pomson
 cl_fasttempentcollision 1000000 // Never check collision, let it just timeout instead
@@ -249,6 +250,7 @@ r_waterforcereflectentities 0 // Do not force entity water reflections
 r_WaterDrawRefraction 0 // Disable water refraction
 //r_cheapwaterstart 0 // Special flat water rendering (does not work in autoexec)
 //r_cheapwaterend .1 // Special flat water rendering (does not work in autoexec)
+tf_water_resolution 32 // Texture resolution for water render
 
 // -----------------
 // '-- Particles --'
@@ -374,7 +376,7 @@ r_eyemove 0 // Disable eye movement
 tf_clientsideeye_lookats 0 // Disable eye lookats
 //blink_duration .2 // Duration of an eye blink
 blink_duration 0 // Disable blinking
-phonemefilter .001 // Do not box filter lip sync
+phonemefilter 1 // Do not box filter lip sync
 //phonemefilter .08 // Box filter lip sync
 phonemesnap 0 // Do not crossfade a second lip sync on any LOD
 //phonemesnap 2 // Default LOD for a second lip sync
@@ -1256,7 +1258,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.10.2 | October 31, 2022"
+alias version_comfig"echo mastercomfig version: 9.10.2 | July 9, 2023"
 
 // Echo
 echo""
@@ -1271,7 +1273,7 @@ echo""
 echo"  **********************************"
 echo"  **********************************"
 echo"  mastercomfig 9.10.2 loaded"
-echo"  October 31, 2022"
+echo"  July 9, 2023"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1279,7 +1281,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 60 hours to produce."
+echo"  This release took 30 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
