workaround for preloading menu music
add some vscript to randomly pick a main menu song and then play it after preloading is finished

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -105,7 +105,7 @@ alias packet_rate_max"cl_cmdrate 100;cl_updaterate 100;packet_rate_max_aliases;a
 
 alias packet_rate packet_rate_standard
 
-//cl_interp_ratio 1;cl_interp .015 // 1 snapshot interpolation for lowest 
+//cl_interp_ratio 1;cl_interp .015 // 1 snapshot interpolation for lowest
 //cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid issues where one snapshot is dropped once in a while. Safest option for most users.
 //cl_interp_ratio 3;cl_interp .045 // Protect more against packet loss, increase further for more buffer protection. Recommended only for users with an unstable connection.
 //cl_interp 0.1 // Useful for smooth animation, use it in offline recordings and singleplayer
@@ -1074,10 +1074,12 @@ alias match_hud match_hud_on
 
 //map_background itemtest // Map background for enhancing main menu visuals, or to preload content
 
+alias checkpointservercommand "script_execute getpointservercommand; sv_allow_point_servercommand always" // I do not know where to put this.
+
 alias dynamic_background_off"alias dynamic_background_level echo dynamic_background=off"
-alias dynamic_background_preload"map_background preload_room;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=preload"
-alias dynamic_background_itemtest"map_background itemtest;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=itemtest"
-alias dynamic_background_dustbowl"map_background background01;wait 1000;stop;alias dynamic_background_level echo dynamic_background=dustbowl"
+alias dynamic_background_preload"map_background preload_room;wait 5;checkpointservercommand;script_execute randommenumusic;wait 5;disconnect;playmenumusic; alias dynamic_background_level echo dynamic_background=itemtest"
+alias dynamic_background_itemtest"map_background itemtest;wait 5;checkpointservercommand;script_execute randommenumusic;wait 5; disconnect;playmenumusic; alias dynamic_background_level echo dynamic_background=itemtest"
+alias dynamic_background_dustbowl"map_background background01;wait 5;checkpointservercommand;script_execute randommenumusic;wait 995;stop;alias dynamic_background_level echo dynamic_background=dustbowl"
 
 alias dynamic_background dynamic_background_off
 
@@ -1334,7 +1336,7 @@ cc_captiontrace 0 // Do not report missing captions in console
 //net_graphsolid 0 // Draw height ticks as single ticks
 net_graphsolid 1 // Revert back to the Half-Life 1 behavior of drawing a full rectangle
 //net_graphtext 1 // Draw text fields
-//net_graphmsecs 400 // The text area measures over this many milliseconds 
+//net_graphmsecs 400 // The text area measures over this many milliseconds
 //net_graphshowlatency 1 // Show the latency part of the graph
 //net_graphshowinterp 1 // Show the interpolation part of the graph
 
